Move all existing sensors & behaviours using EntityRetrievalUtil to use the newer, more efficient methods